<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:layout_below="@id/backToMainFromTeamPage"
        />

    <Button
        android:id="@+id/backToMainFromTeamPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Back To Main Menu" />

    <Button
        android:id="@+id/addMemberButton"
        android:text="Add Member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>